Fixing previous nav spacing

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -239,7 +239,7 @@ h1,h2,h3,ul,li
             {
                 color: #6c6c6c;
                 color: rgba(255,255,255,0.6);
-                padding:9px 20px;
+                padding:9px 15px;
             }
 
             a:hover,a:active,a:focus
@@ -277,25 +277,25 @@ h1,h2,h3,ul,li
             &.vid a
             {
                 background-image:url(/img/vid.png);
-                background-position:10px 10px;
+                background-position:5px 10px;
                 background-repeat:no-repeat;
-                padding-left:30px;
+                padding-left:25px;
             }
 
             &.aud a
             {
                 background-image:url(/img/aud.png);
-                background-position:9px 9px;
+                background-position:4px 9px;
                 background-repeat:no-repeat;
-                padding-left:31px;
+                padding-left:26px;
             }
 
             &.com a
             {
                 background-image:url(/img/com.png);
-                background-position:9px 9px;
+                background-position:4px 9px;
                 background-repeat:no-repeat;
-                padding-left:29px;
+                padding-left:24px;
             }
 
         }
